[gd_scene load_steps=3 format=3 uid="uid://b5t3r6p82fctt"]

[ext_resource type="Script" path="res://elements/units/components/ally_attack_component.gd" id="1_ynr47"]

[sub_resource type="CircleShape2D" id="CircleShape2D_627dh"]
resource_local_to_scene = true

[node name="AttackComponent" type="Node2D"]
script = ExtResource("1_ynr47")

[node name="RangeArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="Range" type="CollisionShape2D" parent="RangeArea"]
shape = SubResource("CircleShape2D_627dh")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true
